# projeto_bookstore

./: .codefactor.yml  .flake8  .gitignore  .verify_final.py  .verify_fix.py  .verify_ok.py  .verify_token_auth.py  .verify_token_auth_min.py  Dockerfile  README.md  README_TOKEN.md  audit_bookstore.ps1  docker-compose.override.yml  docker-compose.yml  docker-compose.yml.bak  pyproject.toml  pytest.ini  requirements.txt  validate.ps1  verify_err.txt  verify_out.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  compose-smoke.yml
bookstore/: pagination.py  settings.py  urls.py
docs/: EBAC_PR.md  VERIFICACAO_PR.md
order/: views.py
order/viewsets/: order_viewset.py
product/: views.py
product/tests/test_pagination/: test_drf_pagination_and_toolbar.py
product/tests/test_viewsets/: test_product_viewset.py
product/viewsets/: product_viewset.py
tests/: conftest.py  test_requirements_and_poetry.py  test_settings_and_toolbar.py  test_urls_and_endpoints.py
