[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Django bookstore with Postgres and Docker Compose"
authors = ["Mateus <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "3.2.8"
djangorestframework = "^3.15.0"
psycopg2-binary = "^2.9.8"
gunicorn = "^20.1.0"
whitenoise = "^5.3.0"
django-extensions = "^3.1.3"
django-debug-toolbar = "^3.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
factory-boy = "^3.2.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
